syntax = "proto3";

package orrery.mtls_bot.root.v1.authentication;

option go_package = "cmd/root/services/v1/insecure;insecure_services_v1";

message AuthenticationStartRequest {
  string id = 1;
  string publicKey = 2;
}
message AuthenticationStartResponse {
  bool success = 1;
}

message AuthenticationFlowCancelRequest {
  string id = 1;
}
message AuthenticationFlowCancelResponse {
  bool success = 1;
}

service Authentication {
  // Start - Start the authentication flow
  rpc Start(AuthenticationStartRequest) returns (AuthenticationStartResponse);
  // Cancel - Cancel the authentication flow
  rpc Cancel(AuthenticationFlowCancelRequest) returns (AuthenticationFlowCancelResponse);
}